modules/cli/src/test/resources/good/misc/globals/gdo/Do01a.scr
module good.misc.globals.gdo.Do01a;


global protocol Do1a(role A, role B)
{
	do Do1aux(A, B);
	//do good.misc.globals.gdo.Do01a.Do1aux(A, B);  // Uncomment is OK
	//do X: Do1aux(A, B);  // Uncomment is OK  // TODO
	//do Do1aux(A, B);  // Uncomment is bad
	//do Do1aux(A, A);  // Uncomment is bad
}

global protocol Do1aux(role C, role D)
{
	l1() from C to D;
}

