modules/cli/src/test/resources/bad/disamb/modules/Modules01.scr
module bad.disamb.modules.Modules01;


global protocol Foo(role A, role B)
{
	
}

global protocol Foo(role A, role B)
{
	
}
